--- a/pred_geeRF.ipynb
+++ b/pred_geeRF.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 1. Authenticate & Import"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -22,6 +22,12 @@
     }
    ],
    "source": [
+    "import os\n",
+    "# 设置代理端口，根据你使用的科学上网软件提供的端口进行\n",
+    "proxy = '{}:{}'.format(\"http://127.0.0.1\", 10809)\n",
+    "os.environ['HTTP_PROXY'] = proxy\n",
+    "os.environ['HTTPS_PROXY'] = proxy\n",
+    "\n",
     "import ee\n",
     "# 网不好的时候自动重试ee.Initialize()\n",
     "print(\"Try init ee...\", end=\" \")\n",
@@ -65,11 +71,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 2. Import Earth Engine Data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -127,15 +133,19 @@
     "selVar1 = ee.List(['B2', 'B3', 'B4', 'B5', 'B6', 'B7','NDVI','NDWI','slope'])\n",
     "\n",
     "# Validation points ----------------------------------------------------------------------------------------------------\n",
-    "valPoints_all = ee.FeatureCollection(\"users/410093033/wuzhengyi3\").merge(ee.FeatureCollection(\"users/410093033/youzhengyi1\"))"
+    "# valPoints_all = ee.FeatureCollection(\"users/410093033/wuzhengyi3\").merge(ee.FeatureCollection(\"users/410093033/youzhengyi1\"))\n",
+    "# valPoints_all = ee.FeatureCollection(\"users/410093033/AllMark1Valid\")\n",
+    "validpoint1 = ee.FeatureCollection('users/410093033/AllMarkValid').filterMetadata('Type','less_than',5)\n",
+    "validpoint2 = ee.FeatureCollection('users/sunly3456/globalValidPoints/certainSample0121').filterMetadata('Type','less_than',5)\n",
+    "valPoints_all = validpoint1.merge(validpoint2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 3. Prepare CNN model & data path"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -143,20 +153,20 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<All keys matched successfully>"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ckptPath = r\"./CKPT/ResNet101_GE17_1206/ckpt.pth\"\n",
+    "ckptPath = r\"./CKPT/ResNet101_GE17_biClass/ckpt.pth\"\n",
     "\n",
-    "model = ResNet101(in_ch=3, n_classes=5)\n",
+    "model = ResNet101(in_ch=3, n_classes=2)\n",
     "model.to(torch.device('cuda:0'))\n",
     "assert os.path.exists(ckptPath), \"ckpt dosen't exists\"\n",
     "ckpt = torch.load(ckptPath, map_location=torch.device('cuda:0'))\n",
@@ -165,22 +175,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 4. Operate on selected 5d grid"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ID5d = 1038\n",
     "\n",
-    "dataPath = r\"E:\\SZT\\Data\\ff0105_ge01\"\n",
-    "exportAssetPath = \"users/thomasshen99/ForestPred_localSure_globalUnsure_1216\"\n",
+    "dataPath = r\"I:/ff0105_ge01\"\n",
+    "exportAssetPath = \"users/thomasshen99/ForestPred_localSure_globalUnsure_biClass_offset_0320\"\n",
     "exportNamePrefix = exportAssetPath.split('/')[-1]\n",
     "\n",
     "time_start = time.time()\n",
-    "dataPath_curGrid = dataPath + \"./grid%d\" % ID5d\n",
+    "dataPath_curGrid = dataPath + \"/grid%d\" % ID5d\n",
     "selected5d = WorldGrid5d.filterMetadata(\"ID\", \"equals\", ID5d).first()\n",
     "llLng, llLat = selected5d.getNumber(\"llLng\").getInfo(), selected5d.getNumber(\"llLat\").getInfo()\n",
     "grid05d, grid01d = utils.get0501Grid(selected5d, forest23)\n",
@@ -188,119 +202,53 @@
     "IDlist_01d = grid01d.reduceColumns(ee.Reducer.toList(), [\"ID_01d\"]).get(\"list\").getInfo()\n",
     "\n",
     "sureSampleNum, unsureSampleNum = 4000, 3200"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 6,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\n",
-      "[Grid1038:Tile5] Wed Dec 16 14:37:19 2020\n",
+      "[Grid432:Tile4] Wed Jan 27 20:22:22 2021\n",
       "--------------------------------------------------------------------------------\n",
       "data ready!\n",
-      "Generating samples for RF: \n",
-      "tile5 ID05d=50:: 100%|██████████| 100/100 [00:11<00:00,  8.80it/s]\n",
-      "tile5 ID05d=51:: 100%|██████████| 100/100 [00:09<00:00, 10.53it/s]\n",
-      "tile5 ID05d=52:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile5 ID05d=53:: 100%|██████████| 100/100 [00:09<00:00, 10.55it/s]\n",
-      "tile5 ID05d=54:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile5 ID05d=55:: 100%|██████████| 100/100 [00:09<00:00, 10.55it/s]\n",
-      "tile5 ID05d=56:: 100%|██████████| 100/100 [00:09<00:00, 10.53it/s]\n",
-      "tile5 ID05d=57:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile5 ID05d=58:: 100%|██████████| 100/100 [00:09<00:00, 10.55it/s]\n",
-      "tile5 ID05d=59:: 100%|██████████| 53/53 [00:04<00:00, 10.61it/s]\n",
-      "RF Training & predicting...\n",
-      "Predicting finished. Grid1038 tile5 exporting task started...\n",
-      "\n",
-      "\n",
-      "[Grid1038:Tile6] Wed Dec 16 14:40:16 2020\n",
-      "--------------------------------------------------------------------------------\n",
-      "data ready!\n",
-      "Generating samples for RF: \n",
-      "tile6 ID05d=60:: 100%|██████████| 100/100 [00:09<00:00, 10.50it/s]\n",
-      "tile6 ID05d=61:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile6 ID05d=62:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile6 ID05d=63:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile6 ID05d=64:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile6 ID05d=65:: 100%|██████████| 100/100 [00:09<00:00, 10.50it/s]\n",
-      "tile6 ID05d=66:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile6 ID05d=67:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile6 ID05d=68:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile6 ID05d=69:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "RF Training & predicting...\n",
-      "Predicting finished. Grid1038 tile6 exporting task started...\n",
-      "\n",
-      "\n",
-      "[Grid1038:Tile7] Wed Dec 16 14:45:01 2020\n",
-      "--------------------------------------------------------------------------------\n",
-      "data ready!\n",
-      "Generating samples for RF: \n",
-      "tile7 ID05d=70:: 100%|██████████| 100/100 [00:09<00:00, 10.48it/s]\n",
-      "tile7 ID05d=71:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile7 ID05d=72:: 100%|██████████| 100/100 [00:09<00:00, 10.50it/s]\n",
-      "tile7 ID05d=73:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile7 ID05d=74:: 100%|██████████| 100/100 [00:09<00:00, 10.55it/s]\n",
-      "tile7 ID05d=75:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile7 ID05d=76:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile7 ID05d=77:: 100%|██████████| 100/100 [00:09<00:00, 10.53it/s]\n",
-      "tile7 ID05d=78:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile7 ID05d=79:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "RF Training & predicting...\n",
-      "Predicting finished. Grid1038 tile7 exporting task started...\n",
-      "\n",
-      "\n",
-      "[Grid1038:Tile8] Wed Dec 16 14:49:06 2020\n",
-      "--------------------------------------------------------------------------------\n",
-      "data ready!\n",
-      "Generating samples for RF: \n",
-      "tile8 ID05d=80:: 100%|██████████| 100/100 [00:09<00:00, 10.50it/s]\n",
-      "tile8 ID05d=81:: 100%|██████████| 100/100 [00:09<00:00, 10.53it/s]\n",
-      "tile8 ID05d=82:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile8 ID05d=83:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile8 ID05d=84:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile8 ID05d=85:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile8 ID05d=86:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile8 ID05d=87:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "tile8 ID05d=88:: 100%|██████████| 100/100 [00:09<00:00, 10.53it/s]\n",
-      "tile8 ID05d=89:: 100%|██████████| 100/100 [00:09<00:00, 10.54it/s]\n",
-      "RF Training & predicting...\n",
-      "Predicting finished. Grid1038 tile8 exporting task started...\n",
-      "\n",
-      "\n",
-      "[Grid1038:Tile9] Wed Dec 16 14:53:05 2020\n",
-      "--------------------------------------------------------------------------------\n",
-      "data ready!\n",
-      "Generating samples for RF: \n",
-      "tile9 ID05d=90:: 100%|██████████| 100/100 [00:09<00:00, 10.49it/s]\n",
-      "tile9 ID05d=91:: 100%|██████████| 100/100 [00:09<00:00, 10.38it/s]\n",
-      "tile9 ID05d=92:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile9 ID05d=93:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile9 ID05d=94:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile9 ID05d=95:: 100%|██████████| 100/100 [00:09<00:00, 10.49it/s]\n",
-      "tile9 ID05d=96:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "tile9 ID05d=97:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile9 ID05d=98:: 100%|██████████| 100/100 [00:09<00:00, 10.52it/s]\n",
-      "tile9 ID05d=99:: 100%|██████████| 100/100 [00:09<00:00, 10.51it/s]\n",
-      "RF Training & predicting...\n",
-      "Predicting finished. Grid1038 tile9 exporting task started...\n",
-      "\n"
+      "Generating samples for RF: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tile4 ID05d=40:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.33it/s]\n",
+      "tile4 ID05d=41:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.27it/s]\n",
+      "tile4 ID05d=42:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.24it/s]\n",
+      "tile4 ID05d=43:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.25it/s]\n",
+      "tile4 ID05d=44:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.24it/s]\n",
+      "tile4 ID05d=45:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.25it/s]\n",
+      "tile4 ID05d=46:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.25it/s]\n",
+      "tile4 ID05d=47:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.25it/s]\n",
+      "tile4 ID05d=48:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.26it/s]\n",
+      "tile4 ID05d=49:: 100%|███████████████████████████████████████████████████████████████| 100/100 [00:08<00:00, 11.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RF Training & predicting...\n"
      ]
     }
    ],
    "source": [
     "all_sure, all_unsure_CNNpred, all_unsure_CNNpred_offseted = [], [], [] # 需要导出CNN预测样本点为csv时使用\n",
-    "for tileNum in range(5, 10):\n",
+    "for tileNum in range(10):\n",
     "    # 1. 生成随机森林样本-------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
     "    idList_05d = list(range(tileNum*10, (tileNum+1)*10, 1))\n",
     "    idList_01d = IDlist_01d[tileNum*10:(tileNum+1)*10]\n",
@@ -309,7 +257,11 @@
     "\n",
     "    # if not all needed ge/ff01/ff05 are found, wait until all needs are satisfied\n",
     "    while(not common.checkExists_ffge(dataPath, ID5d, idList_05d, idList_01d)):\n",
-    "        time.sleep(120)\n",
+    "        # time.sleep(120)\n",
+    "        for id05d in idList_05d:\n",
+    "            f05d = grid05d.filterMetadata(\"ID_05d\", \"equals\", id05d).first()\n",
+    "            f01d = grid01d.filterMetadata(\"ID_05d\", \"equals\", id05d).first()\n",
+    "            common.download_ffge(dataPath, feature05=f05d, feature01=f01d, forest_fuse=forest_fuse)\n",
     "\n",
     "    print(\"Generating samples for RF: \")\n",
     "    llListFS_list, llListFU_list, llListFU_offseted_list = [], [], []\n",
@@ -364,7 +316,8 @@
     "        # ****在此设置使用的RF样本****\n",
     "        # sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + llListFU_offseted_list[idx])\n",
     "        # sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + llListFU_list[idx])\n",
-    "        sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + random.sample(all_unsure_CNNpred_offseted, 1000) + random.sample(llListFU_offseted_list[idx], 1000))\n",
+    "        FU_local_Num = min(len(llListFU_offseted_list[idx]), 1500)\n",
+    "        sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + random.sample(all_unsure_CNNpred_offseted, max(unsureSampleNum-FU_local_Num, 0)) + random.sample(llListFU_offseted_list[idx], FU_local_Num))\n",
     "        classifier = ee.Classifier.smileRandomForest(numberOfTrees=200, variablesPerSplit=9, minLeafPopulation=1, bagFraction=0.6, maxNodes=None, seed=0).train(sample_train, \"forest\", selVar1)\n",
     "        cur_geom05d = grid05d.filterMetadata(\"ID_05d\", \"equals\", ID05d).first().geometry()\n",
     "        predForest = LC_STN.clip(cur_geom05d).select(selVar1).classify(classifier)\n",
@@ -386,15 +339,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6. Metrics"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -403,7 +356,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Generating URL ...\n"
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/tables/974b33c4a1207a69ef5b1ddf7672fdca-6636c7f5c085c8a2bf94510c221224b2:getFeatures\n",
+      "Please wait ...\n",
+      "Data downloaded to f:\\SZT\\Repo\\GEE-GE_Integrated_Forest_Mapping\\foo.csv\n"
      ]
     }
    ],
@@ -412,14 +368,19 @@
     "while(fuckyourassMTFK):\n",
     "    try:\n",
     "        productList = [forest_gong, forest_ygs, forest_liu, forest_chen, forest_hs]\n",
+    "        # productList = [forest_gong,]\n",
     "        productNameList = [\"Forestgong\", \"Forestygs\", \"Forestliu\", \"Forestchen\", \"Foresths\"]\n",
-    "        predDict = {\"forestPred_onlySure\":\"users/thomasshen99/ForestPred_onlySure_1213\", \n",
+    "        # productNameList = [\"Forestgong\"]\n",
+    "        predDict = {\n",
+    "                    \"forestPred_onlySure\":\"users/thomasshen99/ForestPred_onlySure_1213\", \n",
     "                    \"forestPred_withUnsureByCNN\":\"users/thomasshen99/ForestPred_CNNoriginal_1213\", \n",
     "                    \"forestPred_withUnsureByCNN_CAMoffseted\":\"users/thomasshen99/ForestPred_CAMoffseted_1212\", \n",
     "                    \"forestPred_onlyUnsure_CAMoffseted\":\"users/thomasshen99/ForestPred_onlyUnsure_CAMoffseted_1214\", \n",
     "                    \"forestPred_onlyUnsure_CAMoffseted_global\":\"users/thomasshen99/ForestPred_onlyUnsure_CAMoffseted_global_1214\", \n",
     "                    \"forestPred_onlySure_global\":\"users/thomasshen99/ForestPred_onlySure_global_1215\", \n",
-    "                    \"forestPred_localSure_globalUnsure_1216\":\"users/thomasshen99/ForestPred_localSure_globalUnsure_1216\"}\n",
+    "                    \"forestPred_localSure_globalUnsure_1216\":\"users/thomasshen99/ForestPred_localSure_globalUnsure_1216\", \n",
+    "                    \"forestPred_CAMoffseted_biClass\":\"users/thomasshen99/ForestPred_CAMoffseted_biClass\", \n",
+    "                    \"forestPred_CAMoffseted_biClass_123unsure\":\"users/thomasshen99/ForestPred_localSure_globalUnsure_biClass_offset_0320\"}\n",
     "\n",
     "        valPoints_cur = utils.getBalancedValPoints(valPoints_all, region=selected5d.geometry(), maxRate=4)\n",
     "\n",
@@ -437,8 +398,8 @@
     "        areaDict = ee.Dictionary(utils.CalcArea(productComp, selected5d.geometry()))\n",
     "        metricsDictList = ee.List(productNameList).map(utils.getCalcMetricsFunc(valPoints_cur_sampled, areaDict))\n",
     "        metricsFC = ee.FeatureCollection(metricsDictList.map(lambda x:ee.Feature(None, x)))\n",
-    "\n",
-    "        # geemap.ee_export_vector(metricsFC, \"./foo.csv\")\n",
+    "        \n",
+    "        geemap.ee_export_vector(metricsFC, \"./foo.csv\")\n",
     "        fuckyourassMTFK = 0\n",
     "\n",
     "    except Exception as e:\n",
@@ -449,25 +410,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 5. View GEE data with geemap"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Map(center=[56, 26], controls=(WidgetControl(options=['position'], widget=HBox(children=(ToggleButton(value=Fa…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "0a21278eca3e475b931cd7697f77b697"
+      }
+     },
+     "metadata": {}
+    }
+   ],
    "source": [
     "Map = geemap.Map(center=[56, 26], zoom=12, add_google_map=True)\n",
     "Map.add_basemap('Google Satellite')\n",
     "\n",
-    "\n",
     "Map.addLayer(LC_STN.clip(selected5d), vis_params={\"max\":2000, \"min\":0, \"bands\":['B4', 'B3', 'B2']}, name=\"LC08\")\n",
     "\n",
     "Map.addLayer(forest_gong.clip(selected5d), vis_params={\"max\":1, \"min\":0, \"palette\":[\"FF0000\", \"00FF00\"]}, name=\"forest_gong\")\n",
+    "Map.addLayer(forest_liu.clip(selected5d), vis_params={\"max\":1, \"min\":0, \"palette\":[\"FF0000\", \"00FF00\"]}, name=\"forest_gong\")\n",
     "Map.addLayer(forest_fuse.clip(selected5d), vis_params={\"max\":5, \"min\":0, \"palette\":[\"FF0000\", \"FF0000\", \"FFFF00\", \"FFFF00\", \"00FF00\", \"00FF00\"]}, name=\"forest_fuse\", opacity=1)\n",
     "\n",
     "for key in predDict.keys():\n",
@@ -475,6 +449,7 @@
     "\n",
     "\n",
     "Map.addLayerControl()\n",
+    "Map.setCenter(selected5d.getNumber(\"centLng\").getInfo(), selected5d.getNumber(\"centLat\").getInfo(), 8)\n",
     "Map"
    ]
   },
@@ -488,13 +463,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.3 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
